fixed array of awards instead of object